# word-of-the-day-scraper

./: .gitignore  Makefile  README.md  requirements.txt  setup.cfg  wotd.json  wotd.py
src/word_of_the_day_scraper/: scrape.py
