[metadata]
name = word_of_the_day_scraper
version = 0.0.1
author = Hat
author_email = resetheadhat@gmail.com
description = Fetch the word of the day from Dictionary.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/meads/word-of-the-day-scraper
project_urls =
    Bug Tracker = https://github.com/meads/word-of-the-day-scraper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src